# pulsefaucet

./: Cargo.toml
config/: config.toml
src/: bot.rs  config.rs  event.rs  main.rs
