[package]
name = "pulsefaucet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0.11", features = ["ws","rustls","abigen"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread","full"] }
tokio-tungstenite = { version ="0.18.0", features = ["native-tls"] }
async-channel = "2.0.0"
toml = "0.8.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
fxhash = "0.2.1"
anyhow = "1.0.75"
futures = "0.3.29"
